# NacosX

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml
src/nacosx/: __init__.py  core.py
